--- a/sem_4/www/lab2/sass/style.scss
+++ b/sem_4/www/lab2/sass/style.scss
@@ -21,7 +21,7 @@ body {
     min-height: 100vh;
     text-align: justify;
     text-justify: inter-word;
-    background-image: url("background9.jpg");
+    background-image: url("../images/background9.jpg");
     background-size: 100%;
 }
 
