--- a/sem_4/www/lab3/Portfolio/sass/style.css
+++ b/sem_4/www/lab3/Portfolio/sass/style.css
@@ -363,7 +363,7 @@ main {
 }
 
 h1 {
-  padding: 10px 0px;
+  padding: 5px 0px;
 }
 
 h2 {
@@ -467,7 +467,7 @@ footer {
   display: block;
   font-size: 30px;
   color: white;
-  padding: 5px 15px 15px 0px;
+  padding: 0px 15px 10px 0px;
   cursor: pointer;
   float: right;
 }
@@ -485,12 +485,12 @@ nav ul.active {
 
 @media screen and (min-width: 700px) {
   nav ul {
-    display: flex !important;
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
   .hamburger-menu {
-    display: none !important;
+    display: none;
   }
   nav ul li {
     padding: 0;
